<resources>
    <string name="app_name">RedBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_invertebrates">Omirtqasizlar</string>
    <string name="menu_fishes">Baliqlar</string>
    <string name="menu_reptiles">Jerbawirlawshilar</string>
    <string name="menu_birds">Quslar</string>
    <string name="menu_mammals">Sut emizuvshiler</string>
    <string name="status">Status</string>
    <string name="Propagation">Propogation</string>
    <string name="habitat">Habitat</string>
    <string name="quantity">Quantity</string>
    <string name="lifestyle">Life style</string>
    <string name="limiting_factors">Limiting factors</string>
    <string name="breeding">Breeding</string>
    <string name="security">Security</string>
</resources>
